@@ -14,7 +14,6 @@
 - make most events effective on 'click down' instead of 'click up'
 - keyboard shortcut (grid / first letter)
 - tree handling
-- unit mouvement speed according to unit desc
 - group selection save/restore handling
 - fog of war
 - render building that will be constructed
