@@ -11,6 +11,7 @@
 - Screen scrolling with keyboard or mouse
 - FPS counter in window's title
 - All position related stuff is in 'float' type now instead of 'int'
+- Unit moves with speed defined in its UnitDesc
 ===============================================================================
 
 ===============================================================================
